added export-service, report-service, minor fixes
