# gateway/internal/adapters/rest/paymentcalendar/types.go
@@ -1,0 +1,5 @@
+package paymentcalendar
+
+import "github.com/Hubcher/project-management/gateway/internal/core"
+
+type PaymentHandlerService = core.PaymentCalendarDirectory
